--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,3 @@
-LAMBDA_FUNCTION_NAME=""
-RUNTIME=""
-LAMBDA_LAYER_ARN=""
-LAMBDA_FUNCTION_ARN=""
-EVENT_RULE_NAME=""
-CREATE_LAMBDA_ROLE_ARN=""
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+SECRET_PATH="../../src/libs/secret/.env"
