--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - SECRET_PATH=${SECRET_PATH}
+      - RESOURCE_DIR=${RESOURCE_DIR}
     working_dir: /app
     # /app/scripts/deploy/setup.shを実行する
     entrypoint: ["/bin/sh", "-c", "ls -la /app/scripts/deploy/setup.sh && /app/scripts/deploy/setup.sh"]
