--- a/terraform/docker-compose.yml
+++ b/terraform/docker-compose.yml
@@ -4,12 +4,12 @@ services:
     image: hashicorp/terraform:latest
     container_name: terraform
     volumes:
-      - ../../:/app
+      - ../../../:/app
     environment:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_TF}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_TF}
       - SECRET_PATH=${SECRET_PATH}
       - RESOURCE_DIR=${RESOURCE_DIR}
     working_dir: /app
-    # /app/scripts/deploy/setup.shを実行する
-    entrypoint: ["/bin/sh", "-c", "ls -la /app/scripts/deploy/setup.sh && /app/scripts/deploy/setup.sh"]
+    tty: true
+    entrypoint: /bin/sh
