--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,3 @@
-AWS_ACCESS_KEY_ID=""
-AWS_SECRET_ACCESS_KEY=""
-RESOURCE_DIR=""
-LAMBDA_FUNCTION_NAME=""
+AMAZON_ACCESS_KEY_ID=
+AMAZON_SECRET_ACCESS_KEY=
+SECRET_PATH=../../src/libs/secret/.env
