--- a/terraform/docker-compose.yml
+++ b/terraform/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   terraform:
     build:
@@ -6,7 +5,8 @@ services:
       dockerfile: Dockerfile
     container_name: terraform
     volumes:
-      - ..:/app
+      - ../../..:/app
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
